# navigation_server

./: .gitignore  README.md  generate_deb.sh  package.xml  requirements.txt  ros-humble-navigation-server.deb  setup.py
launch/: navigation_server_launch.py
navigation_server/: base_node.py  server_node.py  utils.py
navigation_server/clients/: navstack_client.py
navigation_server/modules/: mode_manager.py  navigation_manager.py  navigation_manager_models.py  on_moving_supervisor.py
navigation_server/topics/: amcl_pose_subscriber.py  base_topics.py  battery_subscriber.py  cmd_vel_publisher.py  data_types.py  initialpose_publisher.py  map_subscriber.py  mode_status_publisher.py  n_people_tracked_subscriber.py  notification_subscriber.py  path_plan_subscriber.py  pose_publisher.py  pose_subscriber.py  rotate2person_cmd_publisher.py  scan_subscriber.py
navigation_server/webapp/: config.py  database.py  dependencies.py  main.py  settings.py  socket_io.py  urls.py  ws_no_prefix.py
navigation_server/webapp/apps/base/: _forms.py  errors.py  forms.py  models.py  serializers.py  utils.py
navigation_server/webapp/apps/debug/: urls.py
navigation_server/webapp/apps/home/: urls.py
navigation_server/webapp/apps/maps/: models.py  urls.py
navigation_server/webapp/apps/navigation/: urls.py
navigation_server/webapp/apps/params/: urls.py
navigation_server/webapp/apps/paths/: models.py  urls.py
navigation_server/webapp/apps/ros2_app/: urls.py
navigation_server/webapp/templates/: base.html
params/: server_node_template.yaml
test/nav_mode/: metadata.yaml
(+45 files in other folders)
