<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_server</name>
  <version>1.0.0</version>
  <description>This package is a bridge between ROS 2 ecosystem and a REST API</description>
  <maintainer email="cmauricioae8@gmail.com">C. Mauricio Arteaga-Escamilla</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
